[tool.poetry]
name = "efficientml"
version = "0.1.0"
description = "Efficient Machine Learning in Production"
authors = ["oceanumeric <numerical.ocean@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
